# NeuralField

./: .gitmodules  CMakeLists.txt  README.md
AmariLib/: AmariModel.cpp  AmariModel.h  CMakeLists.txt
AmariModel/: AmariRender.cpp  AmariRender.h  CMakeLists.txt  ModelContext.cpp  ModelContext.h  main.cpp  stdafx.h
AmariModel/data/: amari.conf  plane.frag  plane.vert
ContourPlotLib/: CMakeLists.txt  ContourFill.cpp  ContourFill.h  ContourLine.cpp  ContourLine.h  ContourParallel.cpp  ContourParallel.h  ContourParallelFill.cpp  ContourParallelFill.h  ContourPlot.cpp  ContourPlot.h
GlUtilsLib/: CMakeLists.txt  FreeType.cpp  FreeType.h  GlUtils.cpp  Shader.cpp  Shader.h  stdafx.h
LinAlgLib/: Gauss.cpp  Gauss.h  Matrix.cpp  Matrix.h  Texture.cpp  Texture.h  stdafx.h
cmake/: 3rdparty.cmake  3rdparty.txt  config.cmake  config.txt  glad.cmake  hmm.cmake  imgui.cmake  inih.cmake  plog.cmake
data/: amari.conf  texture-blur.vert
src/: CMakeLists.txt
src/AmariLib/: AmariModel.cpp  AmariModel.h  CMakeLists.txt  stdafx.h
src/AmariModel/: AmariRender.cpp  AmariRender.h  CMakeLists.txt  ModelContext.cpp  ModelContext.h  main.cpp  stdafx.h
src/AmariModel/data/: amari.conf  plane.frag  plane.vert
src/ContourPlotLib/: CMakeLists.txt  ContourFill.cpp  ContourFill.h  ContourLine.cpp  ContourLine.h  ContourParallel.cpp  ContourParallel.h  ContourParallelFill.cpp  ContourParallelFill.h  ContourPlot.cpp  ContourPlot.h  stdafx.h
src/GlUtilsLib/: FreeType.h  GlUtils.cpp  GlUtils.h  stdafx.h
src/GraphicsLib/: CMakeLists.txt  FrameBufferWrapper.cpp  FrameBufferWrapper.h  FreeType.cpp  FreeType.h  GlUtils.cpp  GlUtils.h  GlfwWrapper.cpp  GlfwWrapper.h  GraphicsLogger.cpp  GraphicsLogger.h  GraphicsResource.cpp  GraphicsResource.h  GraphicsUtils.h  ImGuiWrapper.cpp  ImGuiWrapper.h  PlainTextureRenderer.cpp  PlainTextureRenderer.h  QuadRenderer.cpp  QuadRenderer.h  Shader.cpp  Shader.h  stdafx.h
src/LinAlgLib/: Gauss.h  Texture.cpp  Texture.h
src/MathLib/: CMakeLists.txt  Gauss.cpp  Gauss.h  MathUtils.cpp  MathUtils.h  Matrix.cpp  Matrix.h  Texture.cpp  Texture.h  stdafx.h
src/NeuralField/: CMakeLists.txt  NeuralFieldContext.cpp  NeuralFieldContext.h  QuadRenderer.cpp  TextureRenderer.cpp  TextureRenderer.h  main.cpp  stdafx.h
src/NeuralField/data/: amari.conf  plane.vert  texture-blur.frag  texture.frag  texture.vert
src/NeuralFieldLib/: CMakeLists.txt  NeuralFieldModel.cpp  NeuralFieldModel.h  stdafx.h
src/ParallelUtilsLib/: CMakeLists.txt  ParallelUtils.cpp  ParallelUtils.h  stdafx.h
src/UtilsLib/: CMakeLists.txt  LogFormatter.cpp  LogFormatter.h  ResourceFinder.cpp  ResourceFinder.h  stdafx.h
